--- a/views/review_page_root.ejs
+++ b/views/review_page_root.ejs
@@ -88,7 +88,7 @@
     <h4>강좌 후기</h4>
   </div>
   <!--testimonials-box-container------>
-  <div class="testimonial-box-container row">
+  <div class="testimonial-box-container col-md-4">
     <%-List %>
   </div>
   <br />
