--- a/views/curri_page.ejs
+++ b/views/curri_page.ejs
@@ -189,18 +189,28 @@
             </div>
           </div>
         </li>
-        <li class="timeline-inverted">
-          <div class="timeline-image">
-            <h4 style="color:black">
-              배운 내용으로
-              <br />
-              프로그램 제작,
-              <br />
-              대회를 나갑니다!
-            </h4>
-          </div>
-        </li>
-      </ul>
+	<li>
+            <div class="timeline-image">
+              <img
+                class="rounded-circle img-fluid"
+                src="/image/about/5.jpg"
+                alt="..."
+              />
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 style="color: black">배운 내용으로</h4>
+              </div>
+              <div class="timeline-body">
+                <p class="text-muted">
+                  프로그램을 만들거나
+                  <br />
+                  대회를 나갑니다!
+                </p>
+              </div>
+            </div>
+          </li>
+       </ul>
       <br>
     </div>
   </section>
