--- a/views/enroll_page_payment.ejs
+++ b/views/enroll_page_payment.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-	  <title>코딩나라 - <%=Subject%></title>
+    <title>코딩나라 - <%=Subject%></title>
     <meta charset="utf-8" />
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
@@ -11,7 +11,11 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" type="image/x-icon" href="../../../../image/logo_mini.png" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="../../../../image/logo_mini.png"
+    />
     <!-- Google fonts-->
     <link
       href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700"
@@ -43,7 +47,7 @@
       href="../../../../CSS/enroll_page.css"
     />
   </head>
-   <body>
+  <body>
     <div class="loader-wrapper">
       <span class="loader"><span class="loader-inner"></span></span>
     </div>
@@ -233,19 +237,23 @@
               </section>
             </div>
           </div>
-          <div id="first_img" class="card mb-1" style="overflow: hidden;">
-            <img id="body_img1" src="" style=" max-width: 100%;
-            height: auto;
-            display: block;"/>
+          <div id="first_img" class="card mb-1" style="overflow: hidden">
+            <img
+              id="body_img1"
+              src=""
+              style="max-width: 100%; height: auto; display: block"
+            />
           </div>
           <strong style="text-align: center; align-self: center"
             ><p id="body_img1_description_1"></p>
             <p id="body_img1_description_2" style="color: red"></p
           ></strong>
-          <div id="second_img" class="card mb-1" style="overflow: hidden;">
-            <img id="body_img2" src="" style=" max-width: 100%;
-            height: auto;
-            display: block;"/>
+          <div id="second_img" class="card mb-1" style="overflow: hidden">
+            <img
+              id="body_img2"
+              src=""
+              style="max-width: 100%; height: auto; display: block"
+            />
           </div>
 
           <p
@@ -254,9 +262,11 @@
           ></p>
 
           <div id="third_img" class="card mb-1">
-            <img id="body_img3" src="" style=" max-width: 100%;
-            height: auto;
-            display: block;"/>
+            <img
+              id="body_img3"
+              src=""
+              style="max-width: 100%; height: auto; display: block"
+            />
           </div>
           <p
             id="body_img1_description_4"
@@ -276,24 +286,89 @@
               <p class="card-text">
                 강사에 대한 자세한 세부사항은 아래 상세보기 버튼을 클릭해주세요.
               </p>
-              <button id="modal" class="btn btn-dark" onclick="Instructor_info_detail()">
+              <button
+                id="modal"
+                class="btn btn-dark"
+                onclick="Instructor_info_detail()"
+              >
                 상세보기
               </button>
-              <dialog id="dialog">
-                <div align="center">
-                <img src='https://coding-nara.com/<%=Image%>' width="180" height="250">
-              </div>
-                <form method="dialog">
-                  <div align="center">
-                  <button class="btn btn-light">닫기</button>
+   	      <dialog id="dialog">
+                <div>
+                  <div class="card" style="width: 20rem">
+                    <center>
+                      <img
+                        src="https://coding-nara.com/<%=Image%>"
+                        width="180"
+                        height="250"
+                      />
+                    </center>
+
+                    <div class="card-body">
+                      <table>
+                        <tr
+                          style="
+                            background-color: black;
+                            color: #fff;
+                            display: flex;
+                            justify-content: center;
+                          "
+                        >
+                          <th>학력</th>
+                        </tr>
+
+                        <tr
+                          style="
+                            background-color: #fff;
+                            border: 1px solid #fff;
+                            text-align: right;
+                            font-size: 0.9em;
+                            display: flex;
+                            justify-content: center;
+                          "
+                        >
+                          <td>
+                            <span><%=School%></span>
+                          </td>
+                        </tr>
+                        <tr
+                          style="
+                            background-color: black;
+                            color: #fff;
+                            display: flex;
+                            justify-content: center;
+                          "
+                        >
+                          <th>소개</th>
+                        </tr>
+                        <tr
+                          align="left"
+                          style="
+                            font-size: 0.9em;
+                            background-color: #fff;
+                            border: 1px solid #fff;
+                            display: flex;
+                          "
+                        >
+                          <td align="left">
+                            <span align="left"><%=Description%></span>
+                          </td>
+                        </tr>
+                      </table>
+                    </div>
+                  </div>
                 </div>
+                <form method="dialog">
+                  <div align="center" style="margin-top: 15px">
+                    <button class="btn btn-light">닫기</button>
+                  </div>
                 </form>
               </dialog>
             </div>
           </div>
           <div class="card mb-4">
             <div class="card-header">포인트</div>
-            <div class="card-body" style="overflow: hidden;">
+            <div class="card-body" style="overflow: hidden">
               <div class="col-sm-6">
                 <ul class="list-unstyled mb-0">
                   <li id="point_content">
@@ -334,7 +409,7 @@
               <br />
               <br />
               <div>
-                <div class="result_information">
+                <div class="result_information" style="justify-content: left">
                   <div class="num" style="display: flex; flex-direction: row">
                     <input
                       type="text"
@@ -348,12 +423,10 @@
                       value="1"
                       onkeyup="javascript:basket.changePNum(<%=Price%>);"
                     />
-                    <div class="price_count">
-                      <div class="bigtext right-align sumcount" id="sum_p_num">
-                        <script>
-                          basket.reCalc(<%=Point%>,<%=Price%>);
-                        </script>
-                      </div>
+                    <div
+                      class="price_count"
+                      style="text-align: left; padding-top: 15px"
+                    >
                       <div id="sum_p_price">
                         <script>
                           basket.reCalc(<%=Point%>,<%=Price%>);
@@ -365,7 +438,6 @@
                       <a
                         id="button_move_cart"
                         class="btn btn-success"
-			style="width: 12vh"
                         onclick="javascript:basket.move_cart(<%=Student_ID%>, <%=Course_ID%>, <%=Date_ID%>, <%=Time_ID%>,<%=Teacher_ID%>)"
                       >
                         장바구니에 담기
@@ -499,88 +571,80 @@
   </body>
   <!-- Footer-->
   <footer class="bg-light py-2">
-      <div class="container text-center">
-        <div class="row">
-          <div class="col-md">
-            <div
-              style="
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-              "
-            >
-              <img
-                src="../../../../image/all_logo.png"
-                width="200"
-                height="200"
-                style="text-align: center"
-              />
-              <div class="row-md-6">
-                <div class="small text-muted">
-                  Copyright &copy;코딩나라(Coding-nara)
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6" style="margin-top: 20px">
-            <div
-              style="
-                display: flex;
-                justify-content: center;
-                margin-bottom: 15px;
-              "
-            >
-              <a
-                id="insta-btn"
-                href="https://www.instagram.com/coding_nara/saved/"
-                target="”_blank”"
-                style="margin-right: 10px"
-              >
-                <img
-                  src="../../../../image/insta_logo.png"
-                  width="30px"
-                  height="30px"
-                  alt="인스타 버튼"
-                />
-              </a>
-              <a
-                id="kakao-login-btn"
-                href="http://pf.kakao.com/_xfyhFxj"
-                target="”_blank”"
-              >
-                <img
-                  src="../../../../image/kakaologin.png"
-                  width="30"
-                  height="30"
-                  alt="카카오 버튼"
-                />
-              </a>
-            </div>
-            <div class="container px-4 px-lg-5" style="height: 35px" a>
-              <div class="small text-center text-muted">
-                <a href="/policy/private">개인정보처리방침</a> |
-                <a href="/policy/tos">이용약관</a>
-              </div>
-            </div>
-            <div class="container px-4 px-lg-5" style="margin-bottom: 10px">
-              <div
-                class="small text-left text-muted"
-                style="text-align: center"
-              >
-                <p>
-                  대표자: 장영재, 박민수<br />
-                  사업자번호: 148-14-01860<br />
-                  이메일: admin@coding-nara.com<br />
-                  주소: 서울특별시 서대문구 거북골로 18길 16<br />
-                  통신판매업 신고번호 : 2023-서울서대문-0418
-                </p>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col-md">
+          <div
+            style="
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              align-items: center;
+            "
+          >
+            <img
+              src="../../../../image/all_logo.png"
+              width="200"
+              height="200"
+              style="text-align: center"
+            />
+            <div class="row-md-6">
+              <div class="small text-muted">
+                Copyright &copy;코딩나라(Coding-nara)
               </div>
             </div>
           </div>
         </div>
+        <div class="col-md-6" style="margin-top: 20px">
+          <div
+            style="display: flex; justify-content: center; margin-bottom: 15px"
+          >
+            <a
+              id="insta-btn"
+              href="https://www.instagram.com/coding_nara/saved/"
+              target="”_blank”"
+              style="margin-right: 10px"
+            >
+              <img
+                src="../../../../image/insta_logo.png"
+                width="30px"
+                height="30px"
+                alt="인스타 버튼"
+              />
+            </a>
+            <a
+              id="kakao-login-btn"
+              href="http://pf.kakao.com/_xfyhFxj"
+              target="”_blank”"
+            >
+              <img
+                src="../../../../image/kakaologin.png"
+                width="30"
+                height="30"
+                alt="카카오 버튼"
+              />
+            </a>
+          </div>
+          <div class="container px-4 px-lg-5" style="height: 35px" a>
+            <div class="small text-center text-muted">
+              <a href="/policy/private">개인정보처리방침</a> |
+              <a href="/policy/tos">이용약관</a>
+            </div>
+          </div>
+          <div class="container px-4 px-lg-5" style="margin-bottom: 10px">
+            <div class="small text-left text-muted" style="text-align: center">
+              <p>
+                대표자: 장영재, 박민수<br />
+                사업자번호: 148-14-01860<br />
+                이메일: admin@coding-nara.com<br />
+                주소: 서울특별시 서대문구 거북골로 18길 16<br />
+                통신판매업 신고번호 : 2023-서울서대문-0418
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
-    </footer>
+    </div>
   </footer>
   <!— Bootstrap core JS—>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
