--- a/views/my_page_instructor_update.ejs
+++ b/views/my_page_instructor_update.ejs
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -9,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="shortcut icon" type="image/x-icon" href="../image/logo_mini.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="../../../image/logo_mini.png" />
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Bootstrap Icons-->
@@ -22,6 +20,7 @@
       href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700"
       rel="stylesheet"
     />
+
     <link
       href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"
       rel="stylesheet"
@@ -33,15 +32,11 @@
       rel="stylesheet"
     />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="/CSS/styles_none.css" rel="stylesheet" />
+    <link href="../../../CSS/styles_none.css" rel="stylesheet" />
     <script
       type="text/javascript"
       src="https://code.jquery.com/jquery-1.12.4.min.js"
     ></script>
-    <script
-    type="text/javascript"
-    src="../js/email_validation_and_address_script.js"
-  ></script>
     <script
       type="text/javascript"
       src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"
@@ -197,7 +192,7 @@
               "
             >
               <img
-                src="../image/all_logo.png"
+                src="../../../image/all_logo.png"
                 width="200"
                 height="200"
                 style="text-align: center"
@@ -224,7 +219,7 @@
                 style="margin-right: 10px"
               >
                 <img
-                  src="../image/insta_logo.png"
+                  src="../../../image/insta_logo.png"
                   width="30px"
                   height="30px"
                   alt="인스타 버튼"
@@ -236,7 +231,7 @@
                 target="”_blank”"
               >
                 <img
-                  src="../image/kakaologin.png"
+                  src="../../../image/kakaologin.png"
                   width="30"
                   height="30"
                   alt="카카오 버튼"
@@ -271,7 +266,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- SimpleLightbox plugin JS-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
-  <script src="../js/scripts.js"></script>
 
   <!-- Core theme JS-->
   <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
