--- a/views/my_page_instructor_update_create.ejs
+++ b/views/my_page_instructor_update_create.ejs
@@ -9,6 +9,11 @@
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
   <!-- Bootstrap Icons-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+   <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="../../../../image/logo_mini.png"
+    />
   <!-- Google fonts-->
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"
@@ -16,9 +21,8 @@
   <!-- SimpleLightbox plugin CSS-->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
   <!-- Core theme CSS (includes Bootstrap)-->
-  <link href="/CSS/styles_none.css" rel="stylesheet" />
+  <link href="../../../../CSS/styles_none.css" rel="stylesheet" />
   <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-  <script type="text/javascript" src="../js/email_validation_and_address_script.js"></script>
   <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"></script>
   <style>
     .bd-placeholder-img {
@@ -69,38 +73,56 @@
     });
   </script>
   <!-- Navigation-->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
-    <div class="container px-4 px-lg-5">
-      <a class="navbar-brand" href="#page-top">Coding-nara</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
-        data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ms-auto my-2 my-lg-0">
-          <li class="nav-item"><a class="nav-link" href="/">소개</a></li>
-          <li class="nav-item">
-            <a class="nav-link" href="/curriculum">커리큘럼</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/enroll/sub">수강신청</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/review">강좌후기</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/ask">고객센터</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/login">
-              <%-authCheck %>
-            </a>
-          </li>
-        </ul>
+  <nav
+      class="navbar navbar-expand-lg navbar-light fixed-top py-3"
+      id="mainNav"
+    >
+      <div class="container px-4 px-lg-5">
+        <a
+          class="navbar-brand"
+          href="#page-top"
+          style="display: flex; flex-direction: row"
+        >
+          <img
+            src="../../../../image/logo_mini.png"
+            width="30px"
+            height="30px"
+            style="margin-right: 7px"
+          />Coding-nara
+        </a>
+        <button
+          class="navbar-toggler navbar-toggler-right"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarResponsive"
+          aria-controls="navbarResponsive"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ms-auto my-2 my-lg-1" width="100px;">
+            <li class="nav-item"><a class="nav-link" href="/">소개</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="/curriculum">커리큘럼</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/enroll/sub">수강신청</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/review">강좌후기</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/ask">고객센터</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/login"> <%-authCheck %> </a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
   </br>
   </br>
   </br>
@@ -183,30 +205,10 @@
         <input type="checkbox" id="Course_time" name="Course_time" value="15"><label for="Time_15">21:00~22:00</label><br>
         <input type="checkbox" id="Course_time" name="Course_time" value="16"><label for="Time_16">22:00~23:00</label>
         <input type="checkbox" id="Course_time" name="Course_time" value="17"><label for="Time_17">23:00~00:00</label>
-        <input type="submit" />
+        <input type="submit" value="추가"/>
       </form>
       <br>
-      <!-- <a class="btn btn-warning" href="/myinfo/instructor/update/create_process">강의추가</a> -->
     </div>
-
-    <!-- <div align="center">
-        <form action="/instructor/update/create_process" method="post">
-          <p><input type="text" name="Course_ID" placeholder="가능과목" /></p>
-          <p>
-            <textarea name="DATE_ID" placeholder="가능요일"></textarea>
-          </p>
-          <p>
-            <textarea name="TIME_ID" placeholder="가능시간"></textarea>
-          </p> -->
-    <!-- <p><%-Nickname %></p> -->
-    <!-- <p>
-            <input type="submit" />
-          </p>
-        </form>
-        <br>
-        <a class="btn btn-warning" href="/myinfo/instructor/update/create">강의추가</a>
-    </div> -->
-
   </section>
   <p></p>
 </body>
@@ -224,7 +226,7 @@
               "
             >
               <img
-                src="../image/all_logo.png"
+                src="../../../../image/all_logo.png"
                 width="200"
                 height="200"
                 style="text-align: center"
@@ -251,7 +253,7 @@
                 style="margin-right: 10px"
               >
                 <img
-                  src="../image/insta_logo.png"
+                  src="../../../../image/insta_logo.png"
                   width="30px"
                   height="30px"
                   alt="인스타 버튼"
@@ -263,7 +265,7 @@
                 target="”_blank”"
               >
                 <img
-                  src="../image/kakaologin.png"
+                  src="../../../../image/kakaologin.png"
                   width="30"
                   height="30"
                   alt="카카오 버튼"
@@ -298,7 +300,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- SimpleLightbox plugin JS-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
-<script src="../js/scripts.js"></script>
 
 <!-- Core theme JS-->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
