--- a/views/my_page_instructor_update_enter.ejs
+++ b/views/my_page_instructor_update_enter.ejs
@@ -8,7 +8,7 @@
   <!-- Favicon-->
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
   <!-- Bootstrap Icons-->
-  <link rel="shortcut icon" type="image/x-icon" href="../image/logo_mini.png" />
+  <link rel="shortcut icon" type="image/x-icon" href="../../image/logo_mini.png" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
   <!-- Google fonts-->
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
@@ -185,7 +185,7 @@
               "
             >
               <img
-                src="../image/all_logo.png"
+                src="../../image/all_logo.png"
                 width="200"
                 height="200"
                 style="text-align: center"
@@ -212,7 +212,7 @@
                 style="margin-right: 10px"
               >
                 <img
-                  src="../image/insta_logo.png"
+                  src="../../image/insta_logo.png"
                   width="30px"
                   height="30px"
                   alt="인스타 버튼"
@@ -224,7 +224,7 @@
                 target="”_blank”"
               >
                 <img
-                  src="../image/kakaologin.png"
+                  src="../../image/kakaologin.png"
                   width="30"
                   height="30"
                   alt="카카오 버튼"
