--- a/views/my_page_lecture_history.ejs
+++ b/views/my_page_lecture_history.ejs
@@ -9,7 +9,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="shortcut icon" type="image/x-icon" href="../image/logo_mini.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="../../..//image/logo_mini.png" />
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Bootstrap Icons-->
@@ -33,15 +33,12 @@
       rel="stylesheet"
     />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="/CSS/styles_none.css" rel="stylesheet" />
+    <link href="../../../CSS/styles_none.css" rel="stylesheet" />
     <script
       type="text/javascript"
       src="https://code.jquery.com/jquery-1.12.4.min.js"
     ></script>
-    <script
-    type="text/javascript"
-    src="../js/email_validation_and_address_script.js"
-  ></script>
+  </script>
     <script
       type="text/javascript"
       src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"
@@ -95,7 +92,18 @@
       id="mainNav"
     >
       <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="#page-top">Coding-nara</a>
+        <a
+          class="navbar-brand"
+          href="#page-top"
+          style="display: flex; flex-direction: row"
+        >
+          <img
+            src="../../../image/logo_mini.png"
+            width="30px"
+            height="30px"
+            style="margin-right: 7px"
+          />Coding-nara
+        </a>
         <button
           class="navbar-toggler navbar-toggler-right"
           type="button"
@@ -108,7 +116,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ms-auto my-2 my-lg-0">
+          <ul class="navbar-nav ms-auto my-2 my-lg-1" width="100px;">
             <li class="nav-item"><a class="nav-link" href="/">소개</a></li>
             <li class="nav-item">
               <a class="nav-link" href="/curriculum">커리큘럼</a>
@@ -123,15 +131,15 @@
               <a class="nav-link" href="/ask">고객센터</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/login"><%-authCheck %></a>
+              <a class="nav-link" href="/login"> <%-authCheck %> </a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-  </br>
-  </br>
-  </br>
+  <br />
+  <br />
+  <br />
     <main class="container">
       <div class="p-4 p-md-1 mb-1 rounded text-bg-dark">
         <div class="col-md-6 px-0">
@@ -179,95 +187,86 @@
     <p></p>
   </body>
   <!-- Footer-->
-<footer class="bg-light py-2">
-      <div class="container text-center">
-        <div class="row">
-          <div class="col-md">
-            <div
-              style="
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-              "
-            >
-              <img
-                src="../image/all_logo.png"
-                width="200"
-                height="200"
-                style="text-align: center"
-              />
-              <div class="row-md-6">
-                <div class="small text-muted">
-                  Copyright &copy;코딩나라(Coding-nara)
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6" style="margin-top: 20px">
-            <div
-              style="
-                display: flex;
-                justify-content: center;
-                margin-bottom: 15px;
-              "
-            >
-              <a
-                id="insta-btn"
-                href="https://www.instagram.com/coding_nara/saved/"
-                target="”_blank”"
-                style="margin-right: 10px"
-              >
-                <img
-                  src="../image/insta_logo.png"
-                  width="30px"
-                  height="30px"
-                  alt="인스타 버튼"
-                />
-              </a>
-              <a
-                id="kakao-login-btn"
-                href="http://pf.kakao.com/_xfyhFxj"
-                target="”_blank”"
-              >
-                <img
-                  src="../image/kakaologin.png"
-                  width="30"
-                  height="30"
-                  alt="카카오 버튼"
-                />
-              </a>
-            </div>
-            <div class="container px-4 px-lg-5" style="height: 35px" a>
-              <div class="small text-center text-muted">
-                <a href="/policy/private">개인정보처리방침</a> |
-                <a href="/policy/tos">이용약관</a>
-              </div>
-            </div>
-            <div class="container px-4 px-lg-5" style="margin-bottom: 10px">
-              <div
-                class="small text-left text-muted"
-                style="text-align: center"
-              >
-                <p>
-                  대표자: 장영재, 박민수<br />
-                  사업자번호: 148-14-01860<br />
-                  이메일: admin@coding-nara.com<br />
-                  주소: 서울특별시 서대문구 거북골로 18길 16<br />
-                  통신판매업 신고번호 : 2023-서울서대문-0418
-                </p>
+  <footer class="bg-light py-2">
+    <div class="container text-center">
+      <div class="row">
+        <div class="col-md">
+          <div
+            style="
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              align-items: center;
+            "
+          >
+            <img
+              src="../../../image/all_logo.png"
+              width="200"
+              height="200"
+              style="text-align: center"
+            />
+            <div class="row-md-6">
+              <div class="small text-muted">
+                Copyright &copy;코딩나라(Coding-nara)
               </div>
             </div>
           </div>
         </div>
+        <div class="col-md-6" style="margin-top: 20px">
+          <div
+            style="display: flex; justify-content: center; margin-bottom: 15px"
+          >
+            <a
+              id="insta-btn"
+              href="https://www.instagram.com/coding_nara/saved/"
+              target="”_blank”"
+              style="margin-right: 10px"
+            >
+              <img
+                src="../../../image/insta_logo.png"
+                width="30px"
+                height="30px"
+                alt="인스타 버튼"
+              />
+            </a>
+            <a
+              id="kakao-login-btn"
+              href="http://pf.kakao.com/_xfyhFxj"
+              target="”_blank”"
+            >
+              <img
+                src="../../../image/kakaologin.png"
+                width="30"
+                height="30"
+                alt="카카오 버튼"
+              />
+            </a>
+          </div>
+          <div class="container px-4 px-lg-5" style="height: 35px" a>
+            <div class="small text-center text-muted">
+              <a href="/policy/private">개인정보처리방침</a> |
+              <a href="/policy/tos">이용약관</a>
+            </div>
+          </div>
+          <div class="container px-4 px-lg-5" style="margin-bottom: 10px">
+            <div class="small text-left text-muted" style="text-align: center">
+              <p>
+                대표자: 장영재, 박민수<br />
+                사업자번호: 148-14-01860<br />
+                이메일: admin@coding-nara.com<br />
+                주소: 서울특별시 서대문구 거북골로 18길 16<br />
+                통신판매업 신고번호 : 2023-서울서대문-0418
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
-    </footer>
+    </div>
+  </footer>
   <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- SimpleLightbox plugin JS-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
-  <script src="../js/scripts.js"></script>
-  <script src="../js/instructor.js"></script>
 
 
   <!-- Core theme JS-->
