--- a/views/main_page.ejs
+++ b/views/main_page.ejs
@@ -164,6 +164,23 @@
         </div>
       </div>
     </nav>
+    <!—popup—>
+  <div class="main_popup">
+    <div class="layer_cont">
+      <div class="img_wrap col-md-2" style="background-image: url(../image/poster.png);
+      background-size: cover;
+      height: 50vh;
+      width: 50vh;
+      ">
+      </div>
+      <div class="btn_wrap">
+        <!— 오늘 하루 보지 않기 —>
+        <button class="btn_today_close"><span>오늘 하루 보지 않기</span></button>
+        <!— 그냥 닫기 —>
+        <button class="btn_close">close</button>
+      </div>
+    </div>
+  </div>
     <header class="masthead">
       <div class="container px-4 px-lg-5 h-100">
         <div
