총 금액보다 많은 포인트 사용시 마이너스 되는 금액 에러 고침 + node_modules 재설치

--- a/views/main_page.ejs
+++ b/views/main_page.ejs
@@ -2,6 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="description" content="코딩나라 메인">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="코딩나라">
+    <meta property="og:description" content="코딩나라 메인">
+    <meta property="og:image" content="../image/all_logo.png">
+    <meta property="og:url" content="https://coding-nara.com">
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -477,7 +483,8 @@
                   사업자번호: 148-14-01860<br />
                   이메일: admin@coding-nara.com<br />
                   주소: 서울특별시 서대문구 거북골로 18길 16<br />
-                  통신판매업 신고번호 : 2023-서울서대문-0418
+		  통신판매업 신고번호 : 2023-서울서대문-0418<br />
+		  Tel : 010-6234-8291
                 </p>
               </div>
             </div>
