--- a/views/curri_page.ejs
+++ b/views/curri_page.ejs
@@ -114,8 +114,9 @@
             </div>
             <div class="timeline-body">
               <p class="text-muted">
-                스크레치, Entry를 통해<br />
-                코딩에 대한 이해와 즐거움을 학습합니다.
+			  대상: 완전 코딩을 처음 접하는 아이들에게 추천합니다.<br />
+			  스크레치, Entry를 통해<br />
+              코딩에 대한 이해와 즐거움을 학습합니다.
               </p>
             </div>
           </div>
@@ -131,6 +132,7 @@
             </div>
             <div class="timeline-body">
               <p class="text-muted">
+			  	대상: 스크레치, Entry에 대한 이해가 필요합니다.<br />
                 앱인벤터를 통해 직접 나만의 어플을 제작해봅니다.
               </p>
             </div>
@@ -147,9 +149,10 @@
             </div>
             <div class="timeline-body">
               <p class="text-muted">
-                파이썬, 웹 사이트 제작<br />프로그래밍 언어의 기초 문법
-                학습하고, 간단한 프로그램을 만들어봅니다. 나만의 웹 사이트를
-                제작해봅니다.
+			    대상:진짜 코딩을 접하고 싶은 아이들에게 추천합니다.<br />
+                파이썬, 웹 사이트 제작<br />
+				프로그래밍 언어의 기초 문법을 학습하고, 간단한 프로그램을 만들어봅니다.<br /> 
+				나만의 웹 사이트를 제작해봅니다.
               </p>
             </div>
           </div>
@@ -165,8 +168,9 @@
             </div>
             <div class="timeline-body">
               <p class="text-muted">
-                마인크래프트 코딩, C언어, 파이썬 심화<br />프로그래밍 언어를
-                심도있게 학습하며 프로그램을 직접 만들어봅니다.
+			  	대상 : 기본적인 코딩을 할 줄 알고 자세히 배우고 싶은 아이들에게 추천합니다.<br />	
+                마인크래프트 코딩, C언어, 파이썬 심화<br />
+				프로그래밍 언어를 심도있게 학습하며 프로그램을 직접 만들어봅니다.
               </p>
             </div>
           </div>
@@ -182,6 +186,7 @@
             </div>
             <div class="timeline-body">
               <p class="text-muted">
+			  	대상: 자격증을 취득하면서 실력을 쌓고 싶은 아이들게 추천합니다.<br />
                 COS, COS pro 자격증취득을<br />
                 위하여 진행됩니다.
 
